import grpc
from concurrent import futures
from grpc_service import prediction_pb2_grpc
from model.your_model import YourModel  # Import your PyTorch model implementation
import numpy as np

class PredictionServicer(prediction_pb2_grpc.PredictionServicer):
    def PredictWinner(self, request, context):
        # Assuming request.data contains the image data
        image_data = np.frombuffer(request.data, dtype=np.uint8)

        # Preprocess image_data as needed for your PyTorch model
        # ...

        # Make prediction using your PyTorch model
        prediction_result = YourModel.predict(image_data)

        # Return the prediction result
        return prediction_pb2.PredictionResult(winner=prediction_result)


def run_server():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    prediction_pb2_grpc.add_PredictionServicer_to_server(PredictionServicer(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    run_server()